5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1835_2221.log
== TEST (2019-07-02 15:27:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

for i in range(shape(x)[0]):
print(max(x[i,:]))

-- ERROR:
File "XXXX", line 7
    print(max(x[i,:]))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:27:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))

for i in range(shape(x)[0]):
	print(max(x[i,:]))

-- EXECUTION TIME:
1.1382
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
8.9
10.0
8.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:32:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	a += min(x[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:32:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(x[i,:])
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:32:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(x[i,:])
print(h)
-- EXECUTION TIME:
1.16963
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
14.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:32:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(y[i,:])
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:32:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(y[i,:])
print(h)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:34:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(y[i,:])
print(round(sum(h)/zize(y),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:34:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(x[i,:])
print(round(sum(h)/zize(y),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:34:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(x[i,:])
print(round(sum(h)/size(y),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 15:34:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input()))
y = zeros(x.shape[0],dtype=int)
h = 0
for i in range(x.shape[0]):
	y[i] = min(x[i,:])
	h += min(x[i,:])
print(round(sum(h)/size(y),2))
-- EXECUTION TIME:
1.19966
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
